<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="boris.narodov.catsinsquares.MainActivity"
    tools:showIn="@layout/activity_main">

    <ImageView
        android:id="@+id/backgroundMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/background"
        android:scaleType="centerCrop"
        tools:ignore="MissingConstraints" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4">

            <Button
                android:id="@+id/gameBot"
                style="@style/buttonsMenu"
                android:layout_marginTop="70dp"
                android:onClick="gameBot"
                android:text="@string/play" />
        </TableRow>

        <TableRow
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4">

            <Button
                android:id="@+id/game"
                style="@style/buttonsMenu"
                android:onClick="game"
                android:text="@string/two_players" />
        </TableRow>

        <TableRow
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4">

            <Button
                android:id="@+id/language"
                style="@style/buttonsMenu"
                android:onClick="language"
                android:text="@string/language" />
        </TableRow>

        <TableRow
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4">

            <Button
                android:id="@+id/rules"
                style="@style/buttonsMenu"
                android:text="@string/rules"
                android:onClick="rules"/>
        </TableRow>

        <TableRow
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2">

            <CheckBox
                android:id="@+id/sound"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="3"
                android:text="@string/sound_on"
                android:textColor="#FFFF"
                android:textSize="22sp"
                android:fontFamily="@font/dalmata_dream_normal_109866"
                android:textStyle="italic" />

            <Button
                android:id="@+id/exit"
                style="@style/buttonsMenu"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="2"
                android:minWidth="150dp"
                android:minHeight="50dp"
                android:onClick="exit"
                android:text="@string/exit" />
        </TableRow>

        <boris.google.android.ads.nativetemplates.TemplateView
            android:id="@+id/my_template"
        app:gnt_template_type="@layout/gnt_small_template_view"
        android:layout_width="wrap_content"
        android:layout_height="50dp"

            />
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>